--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,12 @@ table {
 html {
   font-size: 1vmax;
 }
+
+body {
+  /* font-size: 1rem; */
+  line-height: 1.3;
+}
+
 .App {
 }
 
@@ -182,7 +188,7 @@ li a:hover {
   width: 100%;
 }
 
-.dishItem div {
+.name {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -195,8 +201,59 @@ li a:hover {
   transition: all 50ms;
 }
 
-.dishItem div:hover {
+.name:hover {
   opacity: 1;
+}
+
+.info {
+  height: 0;
+  overflow: hidden;
+  transition: all 0.3s ease;
+}
+
+.info-selected {
+  height: auto;
+  border-bottom: solid 1px var(--color);
+  margin-bottom: 15%;
+  transition: all 0.3s ease;
+}
+
+.info-selected h2 {
+  color: var(--color);
+  font-size: 1.3rem;
+  /* text-align: center; */
+  margin-bottom: 1%;
+  line-height: 1;
+}
+
+.info-selected h5 {
+  margin-bottom: 0.5%;
+  line-height: 1;
+}
+
+.info-selected h4 {
+  margin-bottom: 10%;
+  line-height: 1;
+  color: gray;
+}
+
+.info p,
+.info-selected p {
+  text-align: left;
+  margin-bottom: 4.5%;
+}
+
+.extra {
+  position: absolute;
+  bottom: 4%;
+}
+
+.extra p:first-of-type {
+  margin-bottom: 3%;
+}
+
+.extra p:nth-of-type(2) {
+  text-decoration: underline;
 }
 
 .logo {
