--- a/src/App.css
+++ b/src/App.css
@@ -175,11 +175,12 @@ li a:hover {
 .collection {
   column-count: 3;
   max-width: 70%;
+  position: relative;
 }
 
 .dishItem {
   text-align: center;
-  break-inside: avoid;
+  break-inside: avoid !important;
   position: relative;
   margin-bottom: 3%;
 }
@@ -188,7 +189,7 @@ li a:hover {
   width: 100%;
 }
 
-.name {
+.hoverPanel {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -201,7 +202,7 @@ li a:hover {
   transition: all 50ms;
 }
 
-.name:hover {
+.hoverPanel:hover {
   opacity: 1;
 }
 
@@ -216,6 +217,14 @@ li a:hover {
   border-bottom: solid 1px var(--color);
   margin-bottom: 15%;
   transition: all 0.3s ease;
+  position: fixed;
+  top: 0%;
+  left: 30%;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  background: white;
+  padding-top: 1.5%;
 }
 
 .info-selected h2 {
